--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -44,7 +44,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "1+1       "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a=2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,26 +77,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Testez maintenant l'expression `print(a)`."
+    "^5. Testez maintenant l'expression `print(a)`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,26 +130,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a=a+1"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Et vérifiez en affichant la valeur de `a`."
+    "^Et vérifiez en affichant la valeur de `a`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,12 +189,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=5\n",
+    "b=2\n",
+    "print(a, b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,12 +217,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=5\n",
+    "b=2\n",
+    "a, b = b, a\n",
+    "print(a, b)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,12 +246,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a vaut 2 et b vaut 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"a vaut\", a, \"et b vaut\", b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,12 +272,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= \"hello world\"\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,10 +325,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(5==2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,10 +358,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2054408650.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [42]\u001b[0;36m\u001b[0m\n\u001b[0;31m    type{5, 2}\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "type{5, 2}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -275,12 +385,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=2\n",
+    "print(type(x))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -297,7 +418,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v=24"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,12 +433,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 2 * 11 + 2\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -329,10 +463,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(3 * 10 / 3)\n",
+    "print(3*(10//3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -351,12 +498,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pickle import TRUE\n",
+    "\n",
+    "a= 2\n",
+    "if (a%2==0):\n",
+    "    print(True)\n",
+    "else:\n",
+    "    print(False)    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -367,12 +530,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "115792089237316195423570985008687907853269984665640564039457584007913129639936\n"
+     ]
+    }
+   ],
+   "source": [
+    "res= 2**256\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -425,12 +599,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= 0.2 + 0.4\n",
+    "res = (a >= 0.6) or (a < 0.6)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -441,18 +627,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0.5 \n",
+    "res= x* 2**30\n",
+    "print(res/2**30)\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "3. Remplacez la valeur de `x` par 0.1 et refaites le calcul."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0.1 \n",
+    "res= x* 2**30\n",
+    "print(res/2**30)"
    ]
   },
   {
@@ -480,14 +697,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "helloworld\n",
+      "worldhello\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"hello\"\n",
-    "b = 'world'"
+    "b = 'world'\n",
+    "print(a+b)\n",
+    "print(b+a)"
    ]
   },
   {
@@ -508,12 +736,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hellohellohello\n"
+     ]
+    }
+   ],
+   "source": [
+    "res= a*3\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "helloworldhelloworld\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=(a+b)*2\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -524,10 +781,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HELLO'"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.upper()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -540,10 +810,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -554,12 +834,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "res= a>b\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -584,13 +875,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3232\n"
+     ]
+    }
+   ],
    "source": [
-    "a = \"32\""
+    "a = \"32\"\n",
+    "res=a*2\n",
+    "print(res)"
    ]
   },
   {
@@ -602,12 +903,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3232\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(int(res))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -618,12 +929,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input(\"my name is rania\")\n",
+    "print(s)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -634,12 +954,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "s= input(\"enter a number\")\n",
+    "print(s*2)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -650,12 +981,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vous avez 19 ans\n"
+     ]
+    }
+   ],
+   "source": [
+    "s= input(\"quel age avez vous\")\n",
+    "print(\"vous avez\" , s , \"ans\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -730,7 +1072,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 ('l1-python')",
    "language": "python",
    "name": "python3"
   },
@@ -744,7 +1086,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "313439abcd2ce4474e71851942305df839832ad005840083800507a2678ef4d6"
+   }
   }
  },
  "nbformat": 4,
